fix jumpping fidders

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1176,7 +1176,10 @@ footer {
 }
 
 /*Feed */
+
+	
 .sorting {
+	overflow: hidden;
 	padding-bottom: 10px;
 	span {
 		font-size: 12px;
@@ -1184,6 +1187,8 @@ footer {
 		padding-right: 5px;
 	}
 }
+
+
 .portfolio-item {
 	/*overflow: hidden;*/
 	background-color: #fff;
